logs/error.log-2018-07-14.log
[2018-07-14T08:33:31.757] [ERROR] error - E:\code\nodejs\quicky-2\packages\quicky\q-apps\index.js { name: 'candidate',
  dir: 'apps/candidate',
  hostDir: 'candidate',
  fullHostDir: 'e:\\code\\nodejs\\quicky-2\\apps/candidate',
  _mdl: { router: {} } }
[2018-07-14T09:42:11.506] [ERROR] error - E:\code\nodejs\quicky-2\packages\quicky\q-apps\index.js { name: 'candidate',
  dir: 'apps/candidate',
  hostDir: 'candidate',
  fullHostDir: 'e:\\code\\nodejs\\quicky-2\\apps/candidate',
  _mdl: { router: {} } }
[2018-07-14T09:44:08.709] [ERROR] error - E:\code\nodejs\quicky-2\packages\quicky\q-apps\index.js { name: 'candidate',
  dir: 'apps/candidate',
  hostDir: 'candidate',
  fullHostDir: 'e:\\code\\nodejs\\quicky-2\\apps/candidate',
  _mdl: { router: {} } }
[2018-07-14T09:48:00.873] [ERROR] error - E:\code\nodejs\quicky-2\packages\quicky\q-apps\index.js { name: 'candidate',
  dir: 'apps/candidate',
  hostDir: 'candidate',
  fullHostDir: 'e:\\code\\nodejs\\quicky-2\\apps/candidate',
  _mdl: { router: {} } }
[2018-07-14T09:48:25.012] [ERROR] error - E:\code\nodejs\quicky-2\packages\quicky\q-apps\extension-request.js Error: [stdin]:9:1: error: unexpected if in e:\code\nodejs\quicky-2\apps\cms\views\index.html
if @isMobile()
^^
    at Object.sync (E:\code\nodejs\quicky-2\packages\quicky\q-sync\index.js:34:20)
    at IncomingMessage.req.render (E:\code\nodejs\quicky-2\packages\quicky\q-apps\extension-request.js:223:26)
    at E:\code\nodejs\quicky-2\packages\quicky\q-controller\index.js:206:29
    at Object.load (e:\code\nodejs\quicky-2\apps\cms\controllers\index.js:23:17)
    at Object.module.exports [as e:\code\nodejs\quicky-2\apps\cms\controllers\index] (E:\code\nodejs\quicky-2\packages\quicky\q-controller\index.js:154:22)
    at execHandlerByPath (E:\code\nodejs\quicky-2\packages\quicky\q-apps\extension.js:42:25)
    at me.url.owner.handler (E:\code\nodejs\quicky-2\packages\quicky\q-apps\extension.js:111:29)
    at Layer.handle [as handle_request] (E:\code\nodejs\quicky-2\node_modules\express\lib\router\layer.js:95:5)
    at next (E:\code\nodejs\quicky-2\node_modules\express\lib\router\route.js:137:13)
    at Route.dispatch (E:\code\nodejs\quicky-2\node_modules\express\lib\router\route.js:112:3)
    at Layer.handle [as handle_request] (E:\code\nodejs\quicky-2\node_modules\express\lib\router\layer.js:95:5)
    at E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:281:22
    at Function.process_params (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:335:12)
    at next (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:275:10)
    at Function.handle (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:174:3)
    at router (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:47:12)
    at Layer.handle [as handle_request] (E:\code\nodejs\quicky-2\node_modules\express\lib\router\layer.js:95:5)
    at trim_prefix (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:317:13)
    at E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:284:7
    at Function.process_params (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:335:12)
    at next (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:275:10)
    at Function.handle (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:174:3)
    at router (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:47:12)
    at Layer.handle [as handle_request] (E:\code\nodejs\quicky-2\node_modules\express\lib\router\layer.js:95:5)
    at trim_prefix (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:317:13)
    at E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:284:7
    at Function.process_params (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:335:12)
    at next (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:275:10)
    at E:\code\nodejs\quicky-2\packages\quicky\q-apps\index.js:141:13
    at Layer.handle [as handle_request] (E:\code\nodejs\quicky-2\node_modules\express\lib\router\layer.js:95:5)
    at trim_prefix (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:317:13)
    at E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:284:7
    at Function.process_params (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:335:12)
    at next (E:\code\nodejs\quicky-2\node_modules\express\lib\router\index.js:275:10)
    at Immediate.<anonymous> (E:\code\nodejs\quicky-2\node_modules\express-session\index.js:489:7)
    at runCallback (timers.js:676:20)
    at tryOnImmediate (timers.js:645:5)
    at processImmediate [as _immediateCallback] (timers.js:617:5)

